Csoportok update OK

--- a/views/admin.html
+++ b/views/admin.html
@@ -43,7 +43,7 @@
 
             <div>
                 <form action=" /csoportok" method="get">
-                    <button type="submit" class="btn btn-danger ">Termékcsoportok (1) </button>
+                    <button type="submit" class="btn btn-danger ">Termékcsoportok (1) ok </button>
                 </form>
             </div>
             <div>
