--- a/views/kevert.html
+++ b/views/kevert.html
@@ -14,14 +14,14 @@
     <div class="container text-center">
         <br>
         <form action="/" method="get">
-            <button type="submit">⚡ Vissza a menühöz ⚡ </button>
+            <button type="submit" class="btn btn-primary mr-4 btn-lg">⚡ Vissza a menühöz ⚡ </button>
         </form>
 
         <form action="/action_page.php">
             <label for="nev">Neve:</label><br>
             <input type="text" id="nev" name="nev"><br><br>
 
-            <button type="button" class="btn btn-primary mr-4 btn-lg" onclick=adalekPlus()>+ adalékok felsorolása
+            <button type="button" class="btn btn-warning mr-4 btn-lg" onclick=adalekPlus()>+ adalékok felsorolása
                 +</button>
 
             <!-- <label for="adalekid">Adalék név :</label><br>
@@ -40,7 +40,7 @@
 
         <div>
             <form action="/kevert" method="get">
-                <button id="newdata">Ujadat hozzáadása </button><br><br>
+                <button id="newdata" class="btn btn-danger mr-4 btn-lg">Ujadat hozzáadása </button><br><br>
                 <!-- <button type="submit" style="background-color:deeppink ">other
                     🤔 </button> -->
             </form>
