--- a/views/kiszereles.html
+++ b/views/kiszereles.html
@@ -14,7 +14,7 @@
     <div class="container text-center">
         <br>
         <form action="/" method="get">
-            <button type="submit">⚡ Vissza a menühöz ⚡ </button>
+            <button type="submit" class="btn btn-primary mr-4 btn-lg">⚡ Vissza a menühöz ⚡ </button>
         </form>
 
         <form action="/action_page.php">
@@ -25,7 +25,7 @@
             <!-- <input type="submit" value="Submit"> -->
         </form>
 
-        <button id="newdata">Ujadat hozzáadása </button><br><br>
+        <button id="newdata" class="btn btn-danger mr-4 btn-lg">Ujadat hozzáadása </button><br><br>
 
 
 
