--- a/views/termekek.html
+++ b/views/termekek.html
@@ -14,7 +14,7 @@
     <div class="container text-center">
         <br>
         <form action="/" method="get">
-            <button type="submit">⚡ Vissza a menühöz ⚡ </button>
+            <button type="submit" class="btn btn-primary mr-4 btn-lg">⚡ Vissza a menühöz ⚡ </button>
         </form>
 
         <form id="totalForm">
@@ -65,7 +65,7 @@
             </div>
         </form>
 
-        <button id="newdata">Ujadat hozzáadása </button><br><br>
+        <button id="newdata" class="btn btn-danger mr-4 btn-lg">Ujadat hozzáadása </button><br><br>
 
         <!-- Kimért termékek és a kimért mennyiség PÁROSÍTÁSA INFO: Modal INFO: -->
         <div class="modal" id="createXkimeres">
