--- a/views/xkimeresnev.html
+++ b/views/xkimeresnev.html
@@ -14,7 +14,7 @@
     <div class="container text-center">
         <br>
         <form action="/" method="get">
-            <button type="submit">⚡ Vissza a menühöz ⚡ </button>
+            <button type="submit" class="btn btn-primary mr-4 btn-lg">⚡ Vissza a menühöz ⚡ </button>
         </form>
 
         <form>
@@ -22,7 +22,7 @@
             <input type="text" id="nev" name="nev"><br><br>
             <label for="urtartalom">Űrtartalom <kbd> centiliterben !!!</kbd>:</label><br>
             <input type="number" id="urtartalom" name="urtartalom"><br><br>
-            <button id="newdata">Ujadat hozzáadása </button><br><br>
+            <button id="newdata" class="btn btn-danger mr-4 btn-lg">Ujadat hozzáadása </button><br><br>
         </form>
 
 
