--- a/views/csoportok.html
+++ b/views/csoportok.html
@@ -14,13 +14,13 @@
     <div class="container text-center">
         <br>
         <form action="/" method="get">
-            <button type="submit">⚡ Vissza a menühöz ⚡ </button>
+            <button type="submit" class="btn btn-primary mr-4 btn-lg">⚡ Vissza a menühöz ⚡ </button>
         </form>
 
         <form>
             <label for="nev">Termékek csoportosítása :</label><br>
             <input type="text" id="nev" name="nev" required><br><br>
-            <button id="newdata">Ujadat hozzáadása </button><br><br>
+            <button id="newdata" class="btn btn-danger mr-4 btn-lg">Ujadat hozzáadása </button><br><br>
         </form>
 
 
@@ -28,6 +28,7 @@
             <thead>
                 <tr>
                     <th>Neve</th>
+                    <th>Id</th>
                 </tr>
             </thead>
             <tbody id="xkimeresdata">
@@ -35,7 +36,37 @@
         </table>
 
         <div id="adatok"></div> <!-- BUG: -->
+        <!-- BUG:BUG:BUG:BUG:BUG:BUG:BUG: -->
 
+        <!-- The Modal -->
+        <div class="modal" id="myModal">
+            <div class="modal-dialog">
+                <div class="modal-content">
+
+                    <!-- Modal Header -->
+                    <div class="modal-header">
+                        <h4 class="modal-title">Mi legyen a csoport neve?</h4>
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    </div>
+
+                    <!-- Modal body -->
+                    <div class="modal-body">
+                        <form>
+                            <label for="newNev">Új név:</label><br>
+                            <input type="text" id="newNev" name="newNev"><br>
+                        </form>
+                    </div>
+
+                    <!-- Modal footer -->
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-danger" data-dismiss="modal"
+                            onclick="updatecsoportok()">Felülírom !!!</button>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        <!-- BUG:BUG:BUG:BUG:BUG:BUG:BUG: -->
     </div>
     <script src="jquery.slim.min.js"></script>
     <script src="popper.min.js"></script>
