--- a/views/admin.html
+++ b/views/admin.html
@@ -32,12 +32,12 @@
                 <form action="/xkimeresnev" method="get">
 
                     <button class="btn btn-warning " id="btnxkimeresnev">Kimérhető
-                        mennyiségek (2) </button>
+                        mennyiségek (2) ok </button>
                 </form>
             </div>
             <div>
                 <form action="/kiszereles" method="get">
-                    <button type="submit" class="btn btn-secondary ">Kiszerelés felvitele (opcionális) </button>
+                    <button type="submit" class="btn btn-secondary ">Kiszerelés felvitele (opcionális) ok </button>
                 </form>
             </div>
 
