--- a/views/xkimeresnev.html
+++ b/views/xkimeresnev.html
@@ -25,7 +25,6 @@
             <button id="newdata" class="btn btn-danger mr-4 btn-lg">Ujadat hozzáadása </button><br><br>
         </form>
 
-
         <table class="table table-striped">
             <thead>
                 <tr>
@@ -37,15 +36,48 @@
             <tbody id="xkimeresdata">
             </tbody>
         </table>
+        <div id="adatok"></div>
 
-        <div id="adatok"></div> <!-- NOTE: -->
+        <!-- BUG:BUG:BUG:BUG:BUG:BUG:BUG: -->
+        <!-- The Modal -->
+        <div class="modal" id="myModal">
+            <div class="modal-dialog">
+                <div class="modal-content">
+
+                    <!-- Modal Header -->
+                    <div class="modal-header">
+                        <h4 class="modal-title">Mi legyen a kimért mennyiség neve?</h4>
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    </div>
+
+                    <!-- Modal body -->
+                    <div class="modal-body">
+                        <form>
+                            <label for="newNev">Új név:</label><br>
+                            <input type="text" id="newNev" name="newNev"><br>
+                        </form>
+                        <form>
+                            <label for="newUrtartalom">A kimért mennyiség űrtartalma CENTILITERBEN:</label><br>
+                            <input type="text" id="newUrtartalom" name="newUrtartalom"><br>
+                        </form>
+                    </div>
+
+                    <!-- Modal footer -->
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-danger" data-dismiss="modal"
+                            onclick="updatexkimeresnev()">Felülírom !!!</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- BUG:BUG:BUG:BUG:BUG:BUG:BUG: -->
 
     </div>
     <script src="jquery.slim.min.js"></script>
     <script src="popper.min.js"></script>
     <script src="bootstrap.bundle.min.js"></script>
     <script src="admin.js"></script>
-    <script src="xkimeresnev.js"></script> <!-- NOTE: -->
+    <script src="xkimeresnev.js"></script>
 </body>
 
 </html>
