--- a/views/kiszereles.html
+++ b/views/kiszereles.html
@@ -16,51 +16,76 @@
         <form action="/" method="get">
             <button type="submit" class="btn btn-primary mr-4 btn-lg">⚡ Vissza a menühöz ⚡ </button>
         </form>
+        <div class="container p-3 my-3 bg-danger text-white card">
+            <h1>FIGYELEM !!!</h1>
+            <p>Az 1. Kevert italok, és a 2. Kimért italok NEM módosíthatóak, FIX adatok!</p>
+        </div>
 
         <form action="/action_page.php">
-            <label for="nev">Neve:</label><br>
+            <label for="nev">A termék beszerzési kiszerelés neve:</label><br>
             <input type="text" id="nev" name="nev"><br><br>
-            <label for="urtartalom">Űrtartalom <kbd> deciliterben !!!</kbd>:</label><br>
+            <label for="urtartalom">Folyadékoknál űrtartalom <kbd> deciliterben !!!</kbd> Egyébként db, csomag,
+                ...:</label><br>
             <input type="number" id="urtartalom" name="urtartalom"><br><br>
-            <!-- <input type="submit" value="Submit"> -->
         </form>
 
         <button id="newdata" class="btn btn-danger mr-4 btn-lg">Ujadat hozzáadása </button><br><br>
-
-
-
-
-
 
         <table class="table table-striped">
             <thead>
                 <tr>
                     <th>Id</th>
                     <th>Neve</th>
-                    <th>Ürtartalom (dl)</th>
+                    <th>Ürtartalom (dl) vagy 1</th>
                 </tr>
             </thead>
             <tbody id="kiszereles">
 
-
-
             </tbody>
         </table>
-
         <div id="adatok"></div>
 
+        <!-- BUG:BUG:BUG:BUG:BUG:BUG:BUG: -->
+        <!-- The Modal -->
+        <div class="modal" id="myModal">
+            <div class="modal-dialog">
+                <div class="modal-content">
+
+                    <!-- Modal Header -->
+                    <div class="modal-header">
+                        <h4 class="modal-title">Mi legyen a kiszerelés (beszerzés)neve?</h4>
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    </div>
+
+                    <!-- Modal body -->
+                    <div class="modal-body">
+                        <form>
+                            <label for="newNev">Új név:</label><br>
+                            <input type="text" id="newNev" name="newNev"><br>
+                        </form>
+                        <form>
+                            <label for="newUrtartalom">Új ürtartalom vagy darab (1):</label><br>
+                            <input type="text" id="newUrtartalom" name="newUrtartalom"><br>
+                        </form>
+                    </div>
+
+                    <!-- Modal footer -->
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-danger" data-dismiss="modal"
+                            onclick="updatekiszereles()">Felülírom !!!</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- BUG:BUG:BUG:BUG:BUG:BUG:BUG: -->
 
     </div>
-
 
     <script src="jquery.slim.min.js"></script>
     <script src="popper.min.js"></script>
     <script src="bootstrap.bundle.min.js"></script>
     <script src="admin.js"></script>
-    <script src="kiszereles.js"></script><!-- BUG:BUG: BUG: BUG:BUG:-->
-    <!--  <script>
-        renderXkimeresnev();
-    </script> -->
+    <script src="kiszereles.js"></script>
 </body>
 
 </html>
