--- a/views/kevert.html
+++ b/views/kevert.html
@@ -36,7 +36,7 @@
             <!-- <input type="submit" value="Submit"> -->
         </form><br><br>
 
-        <div class="card" id="newVadasz"></div><br><br>
+        <div class="card display-4" id="newVadasz"></div><br><br>
 
         <div>
             <form action="/kevert" method="get">
