--- a/views/admin.html
+++ b/views/admin.html
@@ -37,21 +37,22 @@
             </div>
             <div>
                 <form action="/kiszereles" method="get">
-                    <button type="submit" class="btn btn-secondary ">Kiszerelés felvitele (opcionális) ok </button>
+                    <button type="submit" class="btn btn-secondary">Kiszerelés felvitele (opcionális) ok </button>
                 </form>
             </div>
 
             <div>
-                <form action=" /csoportok" method="get">
-                    <button type="submit" class="btn btn-danger ">Termékcsoportok (1) ok </button>
+                <form action="/csoportok" method="get">
+                    <button type="submit" class="btn btn-danger">Termékcsoportok (1) ok </button>
                 </form>
             </div>
+
             <div>
-                <form action="/" method="get">
-                    <button type="submit" style="background-color:deeppink ">other
-                        🤔 </button>
+                <form action="/forgalom" method="get">
+                    <button type="submit" class="btn btn-secondary ">Forgalom</button>
                 </form>
             </div>
+
             <div>
                 <form action="/" method="get">
                     <button type="submit" style="background-color:deeppink ">other
