--- a/views/pult.html
+++ b/views/pult.html
@@ -21,7 +21,7 @@
         </div>
         <div>
             <form action="/" method="get">
-                <button type="submit" class="btn btn-secondary">LELTÁR 🤔 1366 pixel</button>
+                <button type="submit" class="btn btn-secondary"> 🤔 1366 pixel</button>
             </form>
         </div>
         <div>
@@ -156,7 +156,8 @@
 
         <div class="absolute">
             <button type="button" class="btn btn-primary mr-4 btn-lg" onclick="trKp()">** Kp **</button>
-            <button type="button" class="btn btn-primary mr-4 btn-lg" onclick="trCard()">Kártya</button>
+            <button type="button" class="btn btn-primary mr-4 btn-lg" onclick="trKp2()">* Kp 2 *</button>
+            <button type="button" class="btn btn-info mr-4 btn-lg" onclick="trCard()">Kártya</button>
             <button type="button" class="btn btn-secondary mr-4 btn-lg" onclick="nevesitettHitel()">Hitel</button>
             <button type="button" class="btn btn-warning mr-4 btn-lg kosarBt"
                 onclick="naTegyukEgyUjKosarba()">Kosárba</button>
