--- a/views/pult.html
+++ b/views/pult.html
@@ -24,6 +24,7 @@
                 <button type="submit" class="btn btn-secondary"> 🤔 1366 pixel</button>
             </form>
         </div>
+        <div id="csoportnevKijelzo" class="bg-dark text-white p-2"></div><!-- HACK: now -->
         <div>
             <form action="/" method="get">
                 <button type="button" class="btn btn-secondary" id="hitelRendezes"
