--- a/views/kiszereles.html
+++ b/views/kiszereles.html
@@ -24,7 +24,7 @@
         <form action="/action_page.php">
             <label for="nev">A termék beszerzési kiszerelés neve:</label><br>
             <input type="text" id="nev" name="nev"><br><br>
-            <label for="urtartalom">Folyadékoknál űrtartalom <kbd> deciliterben !!!</kbd> Egyébként db, csomag,
+            <label for="urtartalom">Folyadékoknál űrtartalom <kbd> literben !!!</kbd> Egyébként db, csomag,
                 ...:</label><br>
             <input type="number" id="urtartalom" name="urtartalom"><br><br>
         </form>
