--- a/views/pult.html
+++ b/views/pult.html
@@ -13,7 +13,7 @@
 <body>
 
     <!-- NOTE: felső sav START -->
-    <nav class="fixed-top navbar navbar-expand-sm bg-danger navbar-dark d-flex justify-content-around">
+    <nav class="fixed-top navbar navbar-expand-sm bg-danger navbar-dark d-flex justify-content-between">
         <div>
             <form action="/" method="get">
                 <button type="button" class="btn btn-success kilepes">Kilépés!</button>
