--- a/views/xkimeresnev.html
+++ b/views/xkimeresnev.html
@@ -20,7 +20,7 @@
         <form>
             <label for="nev">Neve (feles ...):</label><br>
             <input type="text" id="nev" name="nev"><br><br>
-            <label for="urtartalom">Űrtartalom <kbd> centiliterben !!!</kbd>:</label><br>
+            <label for="urtartalom">Űrtartalom <kbd> literben !!!</kbd>:</label><br>
             <input type="number" id="urtartalom" name="urtartalom"><br><br>
             <button id="newdata" class="btn btn-danger mr-4 btn-lg">Ujadat hozzáadása </button><br><br>
         </form>
