Forgalomszürő tesztelés előtt

--- a/views/forgalom.html
+++ b/views/forgalom.html
@@ -23,6 +23,17 @@
             <button id="newdata" class="btn btn-danger mr-4 btn-lg">Ujadat hozzáadása </button><br><br>
         </form> -->
 
+        <h1>Intervallum beállítása</h1>
+
+        <form action="/">
+            <label for="forgalomStartDate">START:</label>
+            <input type="date" id="forgalomStartDate" name="forgalomStartDate">
+
+            <label for="forgalomEndDate">END:</label>
+            <input type="date" id="forgalomEndDate" name="forgalomEndDate">
+            <button type="button" class="btn btn-secondary" onclick="datepicker()">mehet</button>
+        </form>
+
         <table class="table table-striped">
             <thead>
                 <tr>
