HTML hol van és a design ballra ahol kell OK

--- a/views/kevert.html
+++ b/views/kevert.html
@@ -11,11 +11,16 @@
 </head>
 
 <body>
-    <div class="container text-center">
+    <div class="container">
+        <div class="card bg-danger text-white">
+            <h4 class="card-body text-center">K E V E R T * I T A L O K</h4>
+        </div>
         <br>
-        <form action="/" method="get">
-            <button type="submit" class="btn btn-primary mr-4 btn-lg">⚡ Vissza a menühöz ⚡ </button>
-        </form>
+        <div class="text-center">
+            <form action="/" method="get">
+                <button type="submit" class="btn btn-primary mr-4 btn-lg">⚡ Vissza a menühöz ⚡ </button>
+            </form>
+        </div>
 
         <form action="/action_page.php">
             <label for="nev">Neve:</label><br>
@@ -38,7 +43,7 @@
 
         <div class="card display-4" id="newVadasz"></div><br><br>
 
-        <div>
+        <div class="text-center">
             <form action="/kevert" method="get">
                 <button id="newdata" class="btn btn-danger mr-4 btn-lg">Ujadat hozzáadása </button><br><br>
                 <!-- <button type="submit" style="background-color:deeppink ">other
