--- a/views/kiszereles.html
+++ b/views/kiszereles.html
@@ -17,7 +17,7 @@
             <button type="submit" class="btn btn-primary mr-4 btn-lg">⚡ Vissza a menühöz ⚡ </button>
         </form>
         <div class="container p-3 my-3 bg-danger text-white card">
-            <h1>FIGYELEM !!!</h1>
+            <h1>FIGYELEM !!! A KISZERELÉSNÉL ...</h1>
             <p>Az 1. Kevert italok, és a 2. Kimért italok NEM módosíthatóak, FIX adatok!</p>
         </div>
 
