--- a/views/csoportok.html
+++ b/views/csoportok.html
@@ -12,6 +12,9 @@
 
 <body>
     <div class="container text-center">
+        <div class="card bg-danger text-white">
+            <h4 class="card-body text-center">T E R M É K * C S O P O R T O K</h4>
+        </div>
         <br>
         <form action="/" method="get">
             <button type="submit" class="btn btn-primary mr-4 btn-lg">⚡ Vissza a menühöz ⚡ </button>
