--- a/views/forgalom.html
+++ b/views/forgalom.html
@@ -12,6 +12,9 @@
 
 <body>
     <div class="container text-center">
+        <div class="card bg-danger text-white">
+            <h4 class="card-body">F O R G A L O M</h4>
+        </div>
         <br>
         <form action="/" method="get">
             <button type="submit" class="btn btn-primary mr-4 btn-lg">⚡ Vissza a menühöz ⚡ </button>
