--- a/views/termekek.html
+++ b/views/termekek.html
@@ -11,144 +11,150 @@
 </head>
 
 <body>
-    <div class="container text-center">
-        <br>
-        <form action="/" method="get">
-            <button type="submit" class="btn btn-primary mr-4 btn-lg">⚡ Vissza a menühöz ⚡ </button>
-        </form>
+    <div class="container ">
+        <div class="container ">
+            <div class="card bg-danger text-white">
+                <h4 class="card-body text-center">T E R M É K * A L A P A D A T O K</h4>
+            </div>
+            <br>
+            <div class="container text-center">
+                <form action="/" method="get">
+                    <button type="submit" class="btn btn-primary mr-4 btn-lg ">⚡ Vissza a menühöz ⚡ </button>
+                </form>
+            </div>
+            <form id="totalForm">
+                <div class="shadow p-2 mb-1 bg-white rounded">
+                    <label for="nev">Termék neve:</label>
+                    <input type="text" id="nev" name="nev" required><br>
+                </div>
+                <div class="shadow p-2 mb-1 bg-white rounded">
+                    <label for="beszar">Beszerzési ár :</label>
+                    <input type="number" id="beszar" name="beszar"><br>
+                </div>
+                <div class="shadow p-2 mb-1 bg-white rounded">
+                    <label for="elar">Eladási ár :</label>
+                    <input type="number" id="elar" name="elar"><br>
+                </div>
+                <div class="shadow p-2 mb-1 bg-white rounded">Leltározandó:<br>
 
-        <form id="totalForm">
-            <div class="shadow p-2 mb-1 bg-white rounded">
-                <label for="nev">Termék neve:</label><br>
-                <input type="text" id="nev" name="nev" required><br>
-            </div>
-            <div class="shadow p-2 mb-1 bg-white rounded">
-                <label for="beszar">Beszerzési ár :</label><br>
-                <input type="number" id="beszar" name="beszar"><br>
-            </div>
-            <div class="shadow p-2 mb-1 bg-white rounded">
-                <label for="elar">Eladási ár :</label><br>
-                <input type="number" id="elar" name="elar"><br>
-            </div>
-            <div class="shadow p-2 mb-1 bg-white rounded">Leltározandó:<br>
-
-                <input type="radio" id="leltarozando" name="leltarozando" size="1" value="i" checked>
-                <label for="leltarozando">IGEN</label><br>
-                <input type="radio" id="leltarozando" name="leltarozando" size="1" value="n">
-                <label for="leltarozando">NEM</label><br>
-
-            </div>
-            <div class="shadow p-2 mb-1 bg-white rounded">
-                <label for="kritikus">Kritikus mennyiség :</label><br>
-                <input type="number" id="kritikus" name="kritikus"><br>
-            </div>
-            <div class="shadow p-2 mb-1 bg-white rounded">
-                <label for="gyujto">Gyüjtő mennyiség :</label><br>
-                <input type="number" id="gyujto" name="gyujto"><br>
-            </div>
-            <div class="shadow p-2 mb-1 bg-white rounded">
-                <label for="jelenlegiKeszlet">Az új termék induló készlete :</label><br>
-                <input type="number" id="jelenlegiKeszlet" name="jelenlegiKeszlet"><br>
-            </div>
-            <div class="shadow p-2 mb-1 bg-white rounded">
-                <label for="urtartalom">A termék beszerzési űrtartalma vagy darab esetén 1 <span
-                        style="background-color:chartreuse ;">
-                        ! CSAK KIMÉRT termék esetén LITERBEN ! </span> / MINDEN MÁS esetben 1 :</label><br>
-                <input type="number" id="urtartalom" name="urtartalom"><br>
-            </div>
-            <div class="shadow p-3 mb-5 bg-white rounded">
-                <fieldset>
-                    <legend>A termék milyen kiszerelésű?</legend>
-                    <div id="kiszerelesSelect"></div>
-                </fieldset>
-            </div>
-            <div class="shadow p-3 mb-5 bg-white rounded">
-                <fieldset>
-                    <legend>A termék melyik csoportba tartozik?</legend>
-                    <div id="csoportSelect"></div>
-                </fieldset>
-            </div>
-        </form>
-
-        <button id="newdata" class="btn btn-danger mr-4 btn-lg">Ujadat hozzáadása </button><br><br>
-
-        <!-- Kimért termékek és a kimért mennyiség PÁROSÍTÁSA INFO: Modal INFO: -->
-        <div class="modal" id="createXkimeres">
-            <div class="modal-dialog">
-                <div class="modal-content">
-
-                    <!-- Modal Header -->
-                    <div class="modal-header">
-                        <h4 class="modal-title">Kimérési egységek hozzárendelése a termékhez</h4>
-                        <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    </div>
-
-                    <!-- Modal body -->
-                    <div class="modal-body">
-                        <div id="azonosito"></div>
-                        <p>=================================</p>
-                        <div id="modalKineresNev"></div>
-                    </div>
-
-                    <!-- Modal footer -->
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-danger" data-dismiss="modal" onclick=""
-                            id="mDataSend">Close</button>
-                    </div>
+                    <input type="radio" id="leltarozando" name="leltarozando" size="1" value="i" checked>
+                    <label for="leltarozando">IGEN</label><br>
+                    <input type="radio" id="leltarozando" name="leltarozando" size="1" value="n">
+                    <label for="leltarozando">NEM</label><br>
 
                 </div>
+                <div class="shadow p-2 mb-1 bg-white rounded">
+                    <label for="kritikus">Kritikus mennyiség :</label>
+                    <input type="number" id="kritikus" name="kritikus"><br>
+                </div>
+                <div class="shadow p-2 mb-1 bg-white rounded">
+                    <label for="gyujto">Gyüjtő mennyiség :</label>
+                    <input type="number" id="gyujto" name="gyujto"><br>
+                </div>
+                <div class="shadow p-2 mb-1 bg-white rounded">
+                    <label for="jelenlegiKeszlet">Az új termék induló készlete :</label>
+                    <input type="number" id="jelenlegiKeszlet" name="jelenlegiKeszlet"><br>
+                </div>
+                <div class="shadow p-2 mb-1 bg-white rounded ">
+                    <label for="urtartalom">A termék beszerzési űrtartalma vagy darab esetén 1 <span
+                            style="background-color:chartreuse ;">
+                            ! CSAK KIMÉRT termék esetén LITERBEN ! </span> / MINDEN MÁS esetben 1 :</label><br>
+                    <input type="number" id="urtartalom" name="urtartalom"><br>
+                </div>
+                <div class="shadow p-3 mb-5 bg-white rounded">
+                    <fieldset>
+                        <legend>A termék milyen kiszerelésű?</legend>
+                        <div id="kiszerelesSelect"></div>
+                    </fieldset>
+                </div>
+                <div class="shadow p-3 mb-5 bg-white rounded">
+                    <fieldset>
+                        <legend>A termék melyik csoportba tartozik?</legend>
+                        <div id="csoportSelect"></div>
+                    </fieldset>
+                </div>
+            </form>
+            <div class="container text-center">
+                <button id="newdata" class="btn btn-danger mr-4 btn-lg">Ujadat hozzáadása </button><br><br>
             </div>
-        </div>
 
-        <table class="table table-striped">
-            <thead>
-                <tr>
-                    <th>Id</th>
-                    <th>Neve</th>
-                    <th>Beszerzési ár</th>
-                </tr>
-            </thead>
-            <tbody id="termekek">
-            </tbody>
-        </table>
-        <div id="adatok"></div>
+            <!-- Kimért termékek és a kimért mennyiség PÁROSÍTÁSA INFO: Modal INFO: -->
+            <div class="modal" id="createXkimeres">
+                <div class="modal-dialog">
+                    <div class="modal-content">
 
-        <!-- BUG:BUG:BUG:BUG:BUG:BUG:BUG: -->
-        <!-- The Modal -->
-        <div class="modal" id="myModal">
-            <div class="modal-dialog">
-                <div class="modal-content">
+                        <!-- Modal Header -->
+                        <div class="modal-header">
+                            <h4 class="modal-title">Kimérési egységek hozzárendelése a termékhez</h4>
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        </div>
 
-                    <!-- Modal Header -->
-                    <div class="modal-header">
-                        <h4 class="modal-title">Mi legyen a termék neve?</h4>
-                        <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    </div>
+                        <!-- Modal body -->
+                        <div class="modal-body">
+                            <div id="azonosito"></div>
+                            <p>=================================</p>
+                            <div id="modalKineresNev"></div>
+                        </div>
 
-                    <!-- Modal body -->
-                    <div class="modal-body">
-                        <form>
-                            <label for="newNev">Új név:</label><br>
-                            <input type="text" id="newNev" name="newNev"><br>
-                        </form>
-                    </div>
+                        <!-- Modal footer -->
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-danger" data-dismiss="modal" onclick=""
+                                id="mDataSend">Close</button>
+                        </div>
 
-                    <!-- Modal footer -->
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-danger" data-dismiss="modal"
-                            onclick="updatetermekek()">Felülírom !!!</button>
                     </div>
                 </div>
             </div>
-        </div>
-        <!-- BUG:BUG:BUG:BUG:BUG:BUG:BUG: -->
 
-    </div>
-    <script src="jquery.slim.min.js"></script>
-    <script src="popper.min.js"></script>
-    <script src="bootstrap.bundle.min.js"></script>
-    <script src="admin.js"></script>
-    <script src="termekek.js"></script><!-- BUG:BUG: BUG: BUG:BUG:-->
+            <table class="table table-striped">
+                <thead>
+                    <tr>
+                        <th>Id</th>
+                        <th>Neve</th>
+                        <th>Beszerzési ár</th>
+                    </tr>
+                </thead>
+                <tbody id="termekek">
+                </tbody>
+            </table>
+            <div id="adatok"></div>
+
+            <!-- BUG:BUG:BUG:BUG:BUG:BUG:BUG: -->
+            <!-- The Modal -->
+            <div class="modal" id="myModal">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+
+                        <!-- Modal Header -->
+                        <div class="modal-header">
+                            <h4 class="modal-title">Mi legyen a termék neve?</h4>
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        </div>
+
+                        <!-- Modal body -->
+                        <div class="modal-body">
+                            <form>
+                                <label for="newNev">Új név:</label><br>
+                                <input type="text" id="newNev" name="newNev"><br>
+                            </form>
+                        </div>
+
+                        <!-- Modal footer -->
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-danger" data-dismiss="modal"
+                                onclick="updatetermekek()">Felülírom !!!</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- BUG:BUG:BUG:BUG:BUG:BUG:BUG: -->
+
+        </div>
+        <script src="jquery.slim.min.js"></script>
+        <script src="popper.min.js"></script>
+        <script src="bootstrap.bundle.min.js"></script>
+        <script src="admin.js"></script>
+        <script src="termekek.js"></script><!-- BUG:BUG: BUG: BUG:BUG:-->
 </body>
 
 </html>
