--- a/views/admin.html
+++ b/views/admin.html
@@ -60,9 +60,8 @@
                 </form>
             </div>
             <div>
-                <form action="/" method="get">
-                    <button type="submit" style="background-color:deeppink ">other
-                        🤔 </button>
+                <form action="/pultosokadmin" method="get">
+                    <button type="submit" class="btn btn-dark ">Pultos admin</button>
                 </form>
             </div>
         </nav>
