--- a/views/pult.html
+++ b/views/pult.html
@@ -170,7 +170,7 @@
                 <div class="d-flex justify-content-between">
                     <button type="button" class="btn btn-dark kpKivet">Kasszából kivét.</button>
                     <p id="datum"></p>
-                    <p>Pultos: John Doe</p>
+                    <h3 id="localStorageName"></h3>
 
                     <!-- <button type="submit" class="btn btn-dark">Kasszából kivét.</button> -->
                     <span id="summa">Mindösszesen</span>
