--- a/views/pultosok-admin.html
+++ b/views/pultosok-admin.html
@@ -11,6 +11,17 @@
 
 <body>
     <div class="container">
+        <div class="card bg-danger text-white">
+            <h4 class="card-body text-center">AZ ADNINISTRÁTOR JELSZAVÁVAL CSAK ÓVATOSAN 🤔</h4>
+            <h4 class="text-center">HA ELFELEJTED A JELSZÓT, KIZÁROD MAGAD A FELÜLETRŐL!!!</h4>
+        </div>
+        <br>
+        <div class="container text-center">
+            <form action="/" method="get">
+                <button type="submit" class="btn btn-primary mr-4 btn-lg ">⚡ Vissza a menühöz ⚡ </button>
+            </form>
+            <br>
+        </div>
         <div class="card bg-light text-dark text-center m-2 p-3 display-4">PULTOSOK KARBANTARTÁSA</div>
         <div id="pultosokList"></div>
     </div>
