--- a/views/pult.html
+++ b/views/pult.html
@@ -8,6 +8,7 @@
     <title>Pult</title>
     <link href="bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <!-- <link rel="stylesheet" href="w3.css"> -->
 </head>
 
 <body>
@@ -394,7 +395,7 @@
 
                 <!-- Modal Header -->
                 <div class="modal-header">
-                    <h4 class="modal-title">Hogyan rendezi?:</h4>
+                    <h4 class="modal-title">Hogyan rendezi? :</h4>
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                 </div>
 
@@ -458,110 +459,37 @@
         </div>
     </div>
 
+    <!-- The Modal -->
+    <!-- Modal -->
+    <div class="modal fade" id="visszajaroModal" role="dialog">
+        <div class="modal-dialog ">
+            <div class="modal-content">
+                <div class="modal-header bg-info text-white">
+                    <h4 class="modal-title">Visszajáró cimletenként</h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body" id="cimletFelsorolas">
+                    <!-- <p>This is a small modal.</p> -->
+                    <!-- <h4><kbd>500-as</kbd> cimletből visszajár: <span class="font-weight-bold"> 1500,- </span> Ft</h4>
+                    <h4><kbd>20.000</kbd> cimletből visszajár: <span class="font-weight-bold"> 11500,- </span> Ft</h4> -->
+                </div>
+                <div class="modal-footer bg-info text-white">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
     </div>
+
+    </div>
+
+    <!-- <div class="container">
+        
+    </div> -->
 
     <script src="jquery.slim.min.js"></script>
     <script src="popper.min.js"></script>
     <script src="bootstrap.bundle.min.js"></script>
     <script src="pult.js"></script>
-
-
-
-    <!-- INFO: -->
-    <!-- <button class="keyboard" id="a">a</button><button class="keyboard" id="b">b</button> -->
-    <!-- INFO: -->
-    <!-- <div class="vKeyboard-container d-flex row">
-
-                            <div class=" vKeyboard-letters " id="vKeyboard-letters">
-                                <div class="row vKeyboardRow vKeyboard-offsetRow1 justify-content-center m-1">
-                                    <button type="button col" class="btn keyboard btn-primary vKeyboard-letter m-1"
-                                        id="keyboard-A" value="A">A</button>
-                                    <button type="button col" class="btn keyboard btn-primary vKeyboard-letter m-1"
-                                        id="keyboard-Z" value="Z">Z</button>
-                                    <button type="button col" class="btn keyboard btn-primary vKeyboard-letter m-1"
-                                        id="keyboard-E" value="E">E</button>
-                                    <button type="button col" class="btn keyboard btn-primary vKeyboard-letter m-1"
-                                        id="keyboard-R" value="R">R</button>
-                                    <button type="button col" class="btn keyboard btn-primary vKeyboard-letter m-1"
-                                        id="keyboard-T" value="T">T</button>
-                                    <button type="button col" class="btn keyboard btn-primary vKeyboard-letter m-1"
-                                        id="keyboard-Y" value="Y">Y</button>
-                                    <button type="button col" class="btn keyboard btn-primary vKeyboard-letter m-1"
-                                        id="keyboard-U" value="U">U</button>
-                                    <button type="button col" class="btn keyboard btn-primary vKeyboard-letter m-1"
-                                        id="keyboard-I" value="I">I</button>
-                                    <button type="button col" class="btn keyboard btn-primary vKeyboard-letter m-1"
-                                        id="keyboard-O" value="O">O</button>
-                                    <button type="button col" class="btn keyboard btn-primary vKeyboard-letter m-1"
-                                        id="keyboard-P" value="P">P</button>
-                                </div>
-                                <div class="row vKeyboardRow vKeyboard-offsetRow2 justify-content-center">
-                                    <button type="button col" class="btn keyboard btn-primary vKeyboard-letter m-1"
-                                        id="keyboard-Q" value="Q">Q</button>
-                                    <button type="button col" class="btn keyboard btn-primary vKeyboard-letter m-1"
-                                        id="keyboard-S" value="S">S</button>
-                                    <button type="button col" class="btn keyboard btn-primary vKeyboard-letter m-1"
-                                        id="keyboard-D" value="D">D</button>
-                                    <button type="button col" class="btn keyboard btn-primary vKeyboard-letter m-1"
-                                        id="keyboard-F" value="F">F</button>
-                                    <button type="button col" class="btn keyboard btn-primary vKeyboard-letter m-1"
-                                        id="keyboard-G" value="G">G</button>
-                                    <button type="button col" class="btn keyboard btn-primary vKeyboard-letter m-1"
-                                        id="keyboard-H" value="H">H</button>
-                                    <button type="button col" class="btn keyboard btn-primary vKeyboard-letter m-1"
-                                        id="keyboard-J" value="J">J</button>
-                                    <button type="button col" class="btn keyboard btn-primary vKeyboard-letter m-1"
-                                        id="keyboard-K" value="K">K</button>
-                                    <button type="button col" class="btn keyboard btn-primary vKeyboard-letter m-1"
-                                        id="keyboard-L" value="L">L</button>
-                                    <button type="button col" class="btn keyboard btn-primary vKeyboard-letter m-1"
-                                        id="keyboard-M" value="M">M</button>
-                                </div>
-                                <div class="row vKeyboardRow vKeyboard-offsetRow3 justify-content-center">
-                                    <button type="button col" class="btn keyboard btn-primary vKeyboard-letter m-1"
-                                        id="keyboard-W" value="W">W</button>
-                                    <button type="button col" class="btn keyboard btn-primary vKeyboard-letter m-1"
-                                        id="keyboard-X" value="X">X</button>
-                                    <button type="button col" class="btn keyboard btn-primary vKeyboard-letter m-1"
-                                        id="keyboard-C" value="C">C</button>
-                                    <button type="button col" class="btn keyboard btn-primary vKeyboard-letter m-1"
-                                        id="keyboard-V" value="V">V</button>
-                                    <button type="button col" class="btn keyboard btn-primary vKeyboard-letter m-1"
-                                        id="keyboard-B" value="B">B</button>
-                                    <button type="button col" class="btn keyboard btn-primary vKeyboard-letter m-1"
-                                        id="keyboard-N" value="N">N</button>
-                                    <span class="vKeyboard-spacer"></span>
-                                    <button type="button col" class="btn keyboard btn-primary vKeyboard-symbol m-1"
-                                        id="keyboard-tiret" value="-">-</button>
-                                    <button type="button col" class="btn keyboard btn-primary vKeyboard-symbol m-1"
-                                        id="keyboard-underscore" value="_">_</button>
-                                    <button type="button col" class="btn keyboard btn-primary vKeyboard-symbol m-1"
-                                        id="keyboard-@" value="@">@</button>
-                                </div>
-                                <div class="row vKeyboardRow justify-content-center">
-                                    
-                                    <button type="button col"
-                                        class="btn keyboard btn-primary vKeyboard-symbol vKeyboard-space"
-                                        id="keyboard-space" value=" ">
-                                        <span class="vKeyboard-space-character">┗━━━━━━━━━━━┛</span>
-                                    </button>
-                                </div>
-                            </div>
-
-                        </div> -->
-    <!-- INFO: -->
-
-    <!-- <div class="col-1 vKeyboard-return-enter ml-auto" id="vKeyboard-enter-return">
-                                <div class="row vKeyboardRow">
-                                    <button type="button col"
-                                        class="btn btn-primary vKeyboard-return vKeyboard-numOk vKeyboard-double"
-                                        id="keyboard-return" value="">⌫</button>
-                                </div>
-                                <div class="row vKeyboardRow">
-                                    <button type="button col" class="btn btn-primary vKeyboard-enter vKeyboard-double"
-                                        disabled="disabled" id="keyboard-enter">OK</button>
-                                </div>
-                            </div> -->
 
 </body>
 
