--- a/views/admin.html
+++ b/views/admin.html
@@ -17,9 +17,10 @@
         <!-- NOTE: felső sav -->
         <nav class="fixed-top navbar navbar-expand-sm bg-light navbar-dark d-flex justify-content-around">
             <div>
-                <form action="/termekek" method="get">
+                <!-- <form action="/termekek" method="get"> -->
+                <form action="/termekek-adatlap" method="get">
                     <button type="submit" class="btn btn-success ">Termék adatok
-                        (3) </button>
+                    </button>
                 </form>
             </div>
             <div>
