--- a/views/pult.html
+++ b/views/pult.html
@@ -22,7 +22,7 @@
         </div>
         <div>
             <form action="/" method="get">
-                <button type="submit" class="btn btn-secondary"> 🤔 1366 pixel</button>
+                <button type="submit" class="btn btn-secondary kilepes"> 🤔 1366 pixel</button>
             </form>
         </div>
         <div id="csoportnevKijelzo" class="bg-dark text-white p-2"></div><!-- HACK: now -->
@@ -157,8 +157,8 @@
         <!-- @media NOTE: -->
 
         <div class="absolute">
-            <button type="button" class="btn btn-primary mr-4 btn-lg" onclick="trKp()">** Kp **</button>
-            <button type="button" class="btn btn-primary mr-4 btn-lg" onclick="trKp2()">* Kp 2 *</button>
+            <button type="button" class="btn btn-dark mr-4 btn-lg " onclick="trKp()">** Kp **</button>
+            <button type="button" class="btn btn-dark mr-4 btn-lg" onclick="trKp2()">* Kp 2 *</button>
             <button type="button" class="btn btn-info mr-4 btn-lg" onclick="trCard()">Kártya</button>
             <button type="button" class="btn btn-secondary mr-4 btn-lg" onclick="nevesitettHitel()">Hitel</button>
             <button type="button" class="btn btn-warning mr-4 btn-lg kosarBt"
@@ -206,11 +206,6 @@
                 <div class="modal-body">
                     <div id="kosarakFelsorolasa"></div>
                 </div>
-
-                <!-- Modal footer -->
-                <!-- <div class="modal-footer">
-                    <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-                </div> -->
 
             </div>
         </div>
@@ -377,12 +372,6 @@
 
                 </div>
 
-                <!-- Modal footer -->
-                <!-- <div class="modal-footer">
-                    <button type="button" class="btn btn-danger" data-dismiss="modal">kp</button>
-                    <button type="button" class="btn btn-danger" data-dismiss="modal">card</button>
-                </div> -->
-
             </div>
         </div>
     </div>
@@ -469,9 +458,6 @@
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                 </div>
                 <div class="modal-body" id="cimletFelsorolas">
-                    <!-- <p>This is a small modal.</p> -->
-                    <!-- <h4><kbd>500-as</kbd> cimletből visszajár: <span class="font-weight-bold"> 1500,- </span> Ft</h4>
-                    <h4><kbd>20.000</kbd> cimletből visszajár: <span class="font-weight-bold"> 11500,- </span> Ft</h4> -->
                 </div>
                 <div class="modal-footer bg-info text-white">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -481,10 +467,6 @@
     </div>
 
     </div>
-
-    <!-- <div class="container">
-        
-    </div> -->
 
     <script src="jquery.slim.min.js"></script>
     <script src="popper.min.js"></script>
