--- a/views/pult.html
+++ b/views/pult.html
@@ -20,11 +20,11 @@
                 <button type="button" class="btn btn-success kilepes">Kilépés!</button>
             </form>
         </div>
-        <div>
+        <!-- <div>
             <form action="/" method="get">
                 <button type="submit" class="btn btn-secondary kilepes"> 🤔 1366 pixel</button>
             </form>
-        </div>
+        </div> -->
         <div id="csoportnevKijelzo" class="bg-dark text-white p-2"></div><!-- HACK: now -->
         <div>
             <form action="/" method="get">
