Tárolás OK full ok

--- a/views/forgalom.html
+++ b/views/forgalom.html
@@ -88,7 +88,7 @@
     <script src="jquery.slim.min.js"></script>
     <script src="popper.min.js"></script>
     <script src="bootstrap.bundle.min.js"></script>
-    <script src="admin.js"></script>
+    <!-- <script src="admin.js"></script> -->
     <script src="forgalom.js"></script>
 </body>
 
