--- a/views/csoportok.html
+++ b/views/csoportok.html
@@ -71,7 +71,7 @@
     <script src="jquery.slim.min.js"></script>
     <script src="popper.min.js"></script>
     <script src="bootstrap.bundle.min.js"></script>
-    <script src="admin.js"></script>
+    <!-- <script src="admin.js"></script> -->
     <script src="csoportok.js"></script>
 </body>
 
