--- a/views/kevert.html
+++ b/views/kevert.html
@@ -112,7 +112,7 @@
     <script src="jquery.slim.min.js"></script>
     <script src="popper.min.js"></script>
     <script src="bootstrap.bundle.min.js"></script>
-    <script src="admin.js"></script>
+    <!-- <script src="admin.js"></script> -->
     <script src="kevert.js"></script><!-- BUG:BUG: BUG: BUG:BUG:-->
     <!--  <script>
         renderXkimeresnev();
